<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <io.legado.app.lib.prefs.SwitchPreference
        android:key="loadCoverOnlyWifi"
        android:defaultValue="false"
        android:title="@string/only_wifi"
        android:summary="@string/only_wifi_summary" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:key="loadCoverHighQuality"
        android:defaultValue="false"
        android:title="@string/load_cover_high_quality"
        android:summary="@string/load_cover_high_quality_summary"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:key="bookCoverShadow"
        android:defaultValue="true"
        android:title="@string/book_cover_shadow"
        android:summary="@string/book_cover_shadow_summary"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:key="coverRule"
        android:title="@string/cover_rule"
        android:summary="@string/cover_rule_summary"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:key="useDefaultCover"
        android:summary="@string/use_default_cover_s"
        android:title="@string/use_default_cover"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:key="coverCollectionManage"
        android:title="@string/cover_collection_manage"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.PreferenceCategory
        android:key="dayThemeCategory"
        android:title="@string/day"
        app:allowDividerAbove="true"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.legado.app.lib.prefs.Preference
            android:key="coverCollectionDay"
            android:title="@string/cover_collection_select"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.NameListPreference
            android:defaultValue="random"
            android:key="coverCollectionModeDay"
            android:title="@string/cover_collection_mode"
            app:entries="@array/cover_collection_mode_entries"
            app:entryValues="@array/cover_collection_mode_values"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="coverShowName"
            android:title="@string/cover_show_name"
            android:summary="@string/cover_show_name_summary"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="coverShowAuthor"
            android:title="@string/cover_show_author"
            android:summary="@string/cover_show_author_summary"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

    <io.legado.app.lib.prefs.PreferenceCategory
        android:key="nightThemeCategory"
        android:title="@string/night"
        app:allowDividerAbove="true"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.legado.app.lib.prefs.Preference
            android:key="coverCollectionNight"
            android:title="@string/cover_collection_select"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.NameListPreference
            android:defaultValue="random"
            android:key="coverCollectionModeNight"
            android:title="@string/cover_collection_mode"
            app:entries="@array/cover_collection_mode_entries"
            app:entryValues="@array/cover_collection_mode_values"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="coverShowNameN"
            android:title="@string/cover_show_name"
            android:summary="@string/cover_show_name_summary"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="coverShowAuthorN"
            android:title="@string/cover_show_author"
            android:summary="@string/cover_show_author_summary"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

</androidx.preference.PreferenceScreen>
